create index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <h1>hihihihihihihihihihihihihi</h1>
+        <p>parag1</p>
+    </main>
+    <footer>
+        <h2>hohohohoho</h2>
+        <p>parag2</p>
+    </footer>
 </body>
 </html>
