--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <footer>
         <h2>hohohohoho</h2>
         <p>parag2</p>
+        <p>update 09/02/2022</p>
     </footer>
 </body>
 </html>
